--- a/Direct/WCFDuplex.Client/WCFDuplex.Client.csproj
+++ b/Direct/WCFDuplex.Client/WCFDuplex.Client.csproj
@@ -52,7 +52,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
-    <Compile Include="HorarioCallback.cs" />
+    <Compile Include="ClockCallback.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
