Fixed bugs and endpoints.

--- a/Direct/WCFDuplex.Server/Web.config
+++ b/Direct/WCFDuplex.Server/Web.config
@@ -17,7 +17,7 @@
       <service name ="WCFDuplex.Server.ClockService" behaviorConfiguration ="svcbh" >
         <host>
           <baseAddresses>
-            <add baseAddress = "http//localhost:9000/ClockService/" />
+            <add baseAddress = "http://localhost:54224/" />
           </baseAddresses>
         </host>
         <endpoint name ="duplexendpoint" address ="" binding ="wsDualHttpBinding" contract ="WCFDuplex.Server.IClockService"/>
